First Section of Work

--- a/index.html
+++ b/index.html
@@ -24,19 +24,6 @@
         <ul class="sf-menu">
           <li class="current"><a href="index.html">home</a></li>
           <li><a href="products.html">products</a></li>
-          <li> <a href="technology.html">technology</a>
-            <ul>
-              <li><a href="#">Maecenas faucibus</a></li>
-              <li><a href="#">Fusce tincidunt</a></li>
-              <li> <a href="#">tempor eros</a>
-                <ul>
-                  <li><a href="#">ut viverra</a></li>
-                  <li><a href="#">hendrerit mauris</a></li>
-                </ul>
-              </li>
-              <li><a href="#">mauris ut du</a></li>
-            </ul>
-          </li>
           <li><a href="pricing.html">pricing</a></li>
           <li><a href="contacts.html">contacts</a></li>
         </ul>
@@ -47,13 +34,13 @@
       <div class="mp-slider">
         <ul class="items">
           <li><img src="images/slide-1.jpg" alt="">
-            <div class="banner mp-ban-1"><span class="row-1">putting our</span><span class="row-2">heart &amp; soul</span><span class="row-3">into the field</span></div>
+            <div class="banner mp-ban-1"><span class="row-1">Templeton</span><span class="row-2">Machinery</span><span class="row-3">Auction</span></div>
           </li>
           <li><img src="images/slide-2.jpg" alt="">
-            <div class="banner mp-ban-2"><span class="row-1">we have a strong</span><span class="row-2">agriculture</span><span class="row-3">heritage</span></div>
+            <div class="banner mp-ban-2"><span class="row-1">based out of</span><span class="row-2">Templeton</span><span class="row-3">Iowa</span></div>
           </li>
           <li><img src="images/slide-3.jpg" alt="">
-            <div class="banner mp-ban-3"><span class="row-1">growing clean</span><span class="row-2">and full of health</span><span class="row-3">products</span></div>
+            <div class="banner mp-ban-3"><span class="row-1">auctioning</span><span class="row-2">machinery</span><span class="row-3">since 2019</span></div>
           </li>
         </ul>
       </div>
