--- a/products.html
+++ b/products.html
@@ -24,19 +24,6 @@
         <ul class="sf-menu">
           <li><a href="index.html">home</a></li>
           <li class="current"><a href="products.html">products</a></li>
-          <li> <a href="technology.html">technology</a>
-            <ul>
-              <li><a href="#">Maecenas faucibus</a></li>
-              <li><a href="#">Fusce tincidunt</a></li>
-              <li> <a href="#">tempor eros</a>
-                <ul>
-                  <li><a href="#">ut viverra</a></li>
-                  <li><a href="#">hendrerit mauris</a></li>
-                </ul>
-              </li>
-              <li><a href="#">mauris ut du</a></li>
-            </ul>
-          </li>
           <li><a href="pricing.html">pricing</a></li>
           <li><a href="contacts.html">contacts</a></li>
         </ul>
@@ -56,24 +43,24 @@
                 <div class="grid_7 alpha">
                   <div class="wrapper"> <img src="images/page2-img1.jpg" alt="" class="img-indent">
                     <dl class="extra-wrap def-list-1">
-                      <dt> <a href="#">Carrot</a> </dt>
-                      <dd> Vivamus hendrerit mauris ut du gravida ut viverra lectus tincidunt. Cras mattis tempor eros. </dd>
+                      <dt> <a href="#">IH 666</a> </dt>
+                      <dd> Gas. </dd>
                     </dl>
                   </div>
                 </div>
                 <div class="grid_7">
                   <div class="wrapper"> <img src="images/page2-img2.jpg" alt="" class="img-indent">
                     <dl class="extra-wrap def-list-1">
-                      <dt> <a href="#">Indian Eggplant</a> </dt>
-                      <dd> Vivamus hendrerit mauris ut du gravida ut viverra lectus tincidunt. Cras mattis tempor eros. </dd>
+                      <dt> <a href="#">1643 Massey with Loader</a> </dt>
+                      <dd> 254 hours, extra set of turf tires. </dd>
                     </dl>
                   </div>
                 </div>
                 <div class="grid_7 omega">
                   <div class="wrapper"> <img src="images/page2-img3.jpg" alt="" class="img-indent">
                     <dl class="extra-wrap def-list-1">
-                      <dt> <a href="#">Wheat</a> </dt>
-                      <dd> Vivamus hendrerit mauris ut du gravida ut viverra lectus tincidunt. Cras mattis tempor eros. </dd>
+                      <dt> <a href="#">Husqvarna</a> </dt>
+                      <dd> 61 in. deck, 20 hours, like new. </dd>
                     </dl>
                   </div>
                 </div>
@@ -82,28 +69,36 @@
                 <div class="grid_7 alpha">
                   <div class="wrapper"> <img src="images/page2-img4.jpg" alt="" class="img-indent">
                     <dl class="extra-wrap def-list-1">
-                      <dt> <a href="#">Cucumbers</a> </dt>
-                      <dd> Vivamus hendrerit mauris ut du gravida ut viverra lectus tincidunt. Cras mattis tempor eros. </dd>
+                      <dt> <a href="#">Brent 544</a> </dt>
+                      <dd> Green, like new. </dd>
                     </dl>
                   </div>
                 </div>
                 <div class="grid_7">
                   <div class="wrapper"> <img src="images/page2-img5.jpg" alt="" class="img-indent">
                     <dl class="extra-wrap def-list-1">
-                      <dt> <a href="#">Corn</a> </dt>
-                      <dd> Vivamus hendrerit mauris ut du gravida ut viverra lectus tincidunt. Cras mattis tempor eros. </dd>
+                      <dt> <a href="#">2017 AgChem Rogator</a> </dt>
+                      <dd> 1650 hours, 120 ft. boom, (new in 2019).
+                          <br>Raven viper IV, autoboom, accubuoom, new fuel pump,
+                          new air to air cooler, new fan hub and clutch;
+                          <br>All new sensors on fuel system, new engine belts.
+                          <br>SN# AGCA1100VHNSL1083, Model 1100B </dd>
                     </dl>
                   </div>
                 </div>
                 <div class="grid_7 omega">
                   <div class="wrapper"> <img src="images/page2-img6.jpg" alt="" class="img-indent">
                     <dl class="extra-wrap def-list-1">
-                      <dt> <a href="#">Peppers</a> </dt>
-                      <dd> Vivamus hendrerit mauris ut du gravida ut viverra lectus tincidunt. Cras mattis tempor eros. </dd>
+                      <dt> <a href="#">2006 Freightliner Columbia</a> </dt>
+                      <dd> 500 horse Detroit 10 speed.
+                          <br>617,000 miles, new front tires.
+                          <br>20,000 lb. front axle box and hoist, new in 2015.
+                          <br>Clean, no rust, California truck. </dd>
                     </dl>
                   </div>
                 </div>
               </div>
+              <!--
               <div class="wrapper hr-border-1 indent-bot-2">
                 <div class="grid_7 alpha">
                   <div class="wrapper"> <img src="images/page2-img1.jpg" alt="" class="img-indent">
@@ -130,6 +125,7 @@
                   </div>
                 </div>
               </div>
+            -->
               <div class="alignright"> <a href="#" class="button">Read more</a> </div>
             </article>
           </div>
