--- a/index.html
+++ b/index.html
@@ -58,26 +58,26 @@
                 <div class="wrapper hr-border-1">
                   <div class="grid_4 alpha"> <img src="images/page1-img1.jpg" class="img-indent-bot" alt="">
                     <dl class="def-list-1">
-                      <dt> <a href="#">Tomatoes</a> </dt>
-                      <dd> Vivamus hendrerit mauris ut du gravida ut viverra lectus tincidunt. </dd>
+                      <dt> <a href="#">IH 166</a> </dt>
+                      <dd> Gas. </dd>
                     </dl>
                   </div>
                   <div class="grid_4"> <img src="images/page1-img2.jpg" class="img-indent-bot" alt="">
                     <dl class="def-list-1">
-                      <dt> <a href="#">Indian Eggplant</a> </dt>
-                      <dd> Vivamus hendrerit mauris ut du gravida ut viverra lectus tincidunt. </dd>
+                      <dt> <a href="#">1643 Massey with Loader</a> </dt>
+                      <dd> 254 hours, extra set of turf tires. </dd>
                     </dl>
                   </div>
                   <div class="grid_4"> <img src="images/page1-img3.jpg" class="img-indent-bot" alt="">
                     <dl class="def-list-1">
-                      <dt> <a href="#">Cabbage</a> </dt>
-                      <dd> Vivamus hendrerit mauris ut du gravida ut viverra lectus tincidunt. </dd>
+                      <dt> <a href="#">Husqvarna</a> </dt>
+                      <dd> 61 in. deck, 20 hours, like new. </dd>
                     </dl>
                   </div>
                   <div class="grid_4 omega"> <img src="images/page1-img4.jpg" class="img-indent-bot" alt="">
                     <dl class="def-list-1">
-                      <dt> <a href="#">Potatoes</a> </dt>
-                      <dd> Vivamus hendrerit mauris ut du gravida ut viverra lectus tincidunt. </dd>
+                      <dt> <a href="#">Brent 544</a> </dt>
+                      <dd> Green, like new. </dd>
                     </dl>
                   </div>
                 </div>
