--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="mp-slider">
         <ul class="items">
           <li><img src="images/slide-1.jpg" alt="">
-            <div class="banner mp-ban-1"><span class="row-1" style="font-family: Arial">Templeton</span><span class="row-2">Machinery</span><span class="row-3">Auction</span></div>
+            <div class="banner mp-ban-1"><span class="row-1" style="font-family: Passion One">Templeton</span><span class="row-2">Machinery</span><span class="row-3">Auction</span></div>
           </li>
           <li><img src="images/slide-2.jpg" alt="">
             <div class="banner mp-ban-2"><span class="row-1">based out of</span><span class="row-2">Templeton</span><span class="row-3">Iowa</span></div>
