Changing Home Page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>BHost</title>
+<title>Nobi Studio</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="BHost template project">
@@ -22,7 +22,8 @@
 
 	<header class="header trans_400">
 		<div class="header_content d-flex flex-row align-items-center justify-content-start trans_400">
-			<div class="logo"><a href="#"><span>b</span>Host</a></div>
+			<div class="logo"><a href="#"><span>Nobi</span> Studio</a></div>
+			<!--<div class="logo"><img src="images/logo.png" alt="Nobi Studio" height="50" width="50"></div>-->
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-10 offset-lg-2">
@@ -90,8 +91,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content text-center">
-							<div class="home_icon ml-auto mr-auto d-flex flex-column align-items-center justify-content-center"><div><img src="images/icon_1.svg" alt="https://www.flaticon.com/authors/srip"></div></div>
-							<div class="home_title">Choose the perfect hosting</div>
+							<div class="home_title"><br><br><br></div>
 							<div class="domain_search">
 								<div class="domain_search_background"></div>
 								<form action="#" class="domain_search_form" id="domain_search_form">
@@ -192,8 +192,8 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container text-center">
-						<div class="section_title"><h2>The package 4 you</h2></div>
-						<div class="section_subtitle">Ipsum dolor sit amet, consectetur adipiscing elit. Mauris velit arcu, scelerisque</div>
+						<div class="section_title"><h2>The Package For You</h2></div>
+						<div class="section_subtitle">Choose any of these packages below to get started!</div>
 					</div>
 				</div>
 			</div>
@@ -219,8 +219,8 @@
 									</defs>
 								</svg>
 							</div>
-							<div class="pricing_title">beginner</div>
-							<div class="pricing_price">Free<div>Always</div></div>
+							<div class="pricing_title">BEGINNER</div>
+							<div class="pricing_price">$960<span>00</span><div>Taxes Included</div></div>
 						</div>
 						<div class="pricing_content d-flex flex-column align-items-center justify-content-start">
 							<div class="pricing_list">
@@ -231,7 +231,7 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>2 E-mail Addresess</div>
+										<div>2GB Bandwidth</div>
 									</li>
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
@@ -239,7 +239,7 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>25 GB Space</div>
+										<div>5GB Storage</div>
 									</li>
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
@@ -247,7 +247,7 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>24h Live Support</div>
+										<div>Limited Support</div>
 									</li>
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
@@ -255,15 +255,19 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>Documetation inside</div>
+										<div>Domain Not Included</div>
 									</li>
+									<!--
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div>X</div>
 										<div>SEO Plan</div>
 									</li>
+									-->
 								</ul>
 							</div>
+							<!--
 							<div class="pricing_info"><a href="#"><div>i</div></a></div>
+							-->
 							<div class="button pricing_button trans_200"><a href="#">order plan</a></div>
 						</div>
 					</div>
@@ -279,8 +283,8 @@
 									<path class="wave_path trans_200" fill="url(#grad_1)" d="M0,0 V210 S500,218 860,193  S1400,125 1920,155 V0 H0"></path>
 								</svg>
 							</div>
-							<div class="pricing_title">recommended</div>
-							<div class="pricing_price">$29<span>90</span><div>Per Month</div></div>
+							<div class="pricing_title">PROFESSIONAL</div>
+							<div class="pricing_price">$1200<span>00</span><div>Taxes Included</div></div>
 						</div>
 						<div class="pricing_content d-flex flex-column align-items-center justify-content-start">
 							<div class="pricing_list">
@@ -291,7 +295,7 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>2 E-mail Addresess</div>
+										<div>Unlimited Bandwidth</div>
 									</li>
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
@@ -299,7 +303,7 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>25 GB Space</div>
+										<div>10GB Storage</div>
 									</li>
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
@@ -307,7 +311,7 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>24h Live Support</div>
+										<div>Normal Hours Support</div>
 									</li>
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
@@ -315,8 +319,9 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>Documetation inside</div>
+										<div>Free Domain Name</div>
 									</li>
+									<!--
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 26 26" enable-background="new 0 0 26 26" width="26px" height="26px">
@@ -325,9 +330,12 @@
 										</div>
 										<div>SEO Plan</div>
 									</li>
+									-->
 								</ul>
 							</div>
+							<!--
 							<div class="pricing_info"><a href="#"><div>i</div></a></div>
+							-->
 							<div class="button pricing_button trans_200"><a href="#">order plan</a></div>
 						</div>
 					</div>
@@ -343,8 +351,8 @@
 									<path class="wave_path trans_200" fill="url(#grad_1)" d="M0,0 V210 S500,218 860,193  S1400,125 1920,155 V0 H0"></path>
 								</svg>
 							</div>
-							<div class="pricing_title">professional</div>
-							<div class="pricing_price">$59<span>90</span><div>Per Month</div></div>
+							<div class="pricing_title">VIP</div>
+							<div class="pricing_price">$2400<span>00</span><div>Taxes Included</div></div>
 						</div>
 						<div class="pricing_content d-flex flex-column align-items-center justify-content-start">
 							<div class="pricing_list">
@@ -355,7 +363,7 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>2 E-mail Addresess</div>
+										<div>Unlimited Bandwidth</div>
 									</li>
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
@@ -363,7 +371,7 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>25 GB Space</div>
+										<div>20GB Storage</div>
 									</li>
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
@@ -371,7 +379,7 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>24h Live Support</div>
+										<div>24h Support</div>
 									</li>
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
@@ -379,8 +387,9 @@
 												<path class="check_svg trans_200" d="m.3,14c-0.2-0.2-0.3-0.5-0.3-0.7s0.1-0.5 0.3-0.7l1.4-1.4c0.4-0.4 1-0.4 1.4,0l.1,.1 5.5,5.9c0.2,0.2 0.5,0.2 0.7,0l13.4-13.9h0.1v-8.88178e-16c0.4-0.4 1-0.4 1.4,0l1.4,1.4c0.4,0.4 0.4,1 0,1.4l0,0-16,16.6c-0.2,0.2-0.4,0.3-0.7,0.3-0.3,0-0.5-0.1-0.7-0.3l-7.8-8.4-.2-.3z" fill="#606ef1"/>
 											</svg>
 										</div>
-										<div>Documetation inside</div>
+										<div>Free Domain Name</div>
 									</li>
+									<!--
 									<li class="d-flex flex-row align-items-center justify-content-start">
 										<div class="pricing_icon d-flex flex-column align-items-center justify-content-center">
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 26 26" enable-background="new 0 0 26 26" width="26px" height="26px">
@@ -389,9 +398,12 @@
 										</div>
 										<div>SEO Plan</div>
 									</li>
+									-->
 								</ul>
 							</div>
+							<!--
 							<div class="pricing_info"><a href="#"><div>i</div></a></div>
+							-->
 							<div class="button pricing_button trans_200"><a href="#">order plan</a></div>
 						</div>
 					</div>
